# claw-memory-engine

./: .gitignore  PLAN.md  README.md  feishu_callback_server.py  install.bat  install.sh  openclaw.plugin.json  pyproject.toml  requirements.txt  start_services.py
openclaw-plugin/: index.js  package.json
openclaw-skills/memory-feishu/: SKILL.md
openclaw-skills/memory-find/: SKILL.md
openclaw-skills/memory-forgetting/: SKILL.md
openclaw-skills/memory-list/: SKILL.md
openclaw-skills/memory-remember/: SKILL.md
src/: __init__.py
src/cli/: completion.py  main.py  shell_completion.py
src/config/: __init__.py  config_manager.py
src/core/: __init__.py  decision_engine.py  forgetting.py  implicit_memory.py  models.py  team_memory.py
src/integrations/: __init__.py  feishu.py  openclaw.py  scheduler.py
src/logger/: __init__.py  logger.py
src/retrieval/: __init__.py  embeddings.py  engine.py
src/storage/: __init__.py  chroma_store.py  sqlite_store.py
src/utils/: __init__.py  project.py
tests/: conftest.py
tests/benchmark/: __init__.py  test_benchmark.py
tests/integration/: test_cli.py
tests/unit/: test_chroma_store.py  test_completion.py  test_config.py  test_embeddings.py  test_feishu.py  test_forgetting.py  test_logger.py  test_models.py  test_retrieval.py  test_scheduler.py  test_sqlite_store.py
